Rework the routing to nest models, robot conf and datasets under projects
Pretty sure I did it wrong, but it works
